2003-11-09  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc2_diag.c: 
	* include/mpc8xxx.h: Move some serial definitions to common file.

2003-09-08  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc2_diag.c: Fix baud rate clock setup - was off by 1.
	Reported by Tord Andersson <Tord.Andersson@combitechsystems.com>

2003-08-26  Gary Thomas  <gary@mlbassoc.com>

	* include/mpc8xxx.h: Flesh out PCI definitions.

2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* src/variant.S: 
	* src/var_misc.c: 
	* src/var_intr.c: 
	* src/quicc2_diag.c: 
	* src/cpm.c: 
	* include/variant.inc:
	* include/var_regs.h: 
	* include/var_intr.h:
	* include/var_cache.h: 
	* include/mpc8xxx.h: 
	* cdl/hal_powerpc_mpc8xxx.cdl: New file(s) - variant support for
	Motorola MPC8xxx (Power-QUICC2) based systems.  Roughly based on
	previously contributed hal/powerpc/mpc8260 package.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2003 Gary Thomas
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros